# xkcd_display

./: .gitignore  Makefile  README.md  pyproject.toml
hardware/: index.md
installation/: index.md  raspberry-pi.md
models/: Wiper.stl  assembly.scad  display-mount.scad  display-mount.stl  epaper-display.scad  ikea.scad  pillars.scad  servo-mount.scad  wiper.scad  xkcd Cueball.stl  xkcd Megan.stl
software/xkcd_display/: README.md  pyproject.toml
software/xkcd_display/tests/: test_cli.py  test_dialog.py  test_display.py  test_renderer.py  test_xkcd_display.py
software/xkcd_display/xkcd_display/: __init__.py  cli.py  display.py  epd_dummy.py  renderer.py  service.py
software/xkcd_epaper/: Makefile  README.md  pyproject.toml
software/xkcd_epaper/xkcd_epaper/: __init__.py  config.py  lut.py
tests/: test_cli.py  test_dialog.py  test_display.py  test_renderer.py  test_xkcd_display.py
xkcd_display/: cli.py  dialog.py  display.py  renderer.py
