[tool.poetry]
name = "xkcd_display"
version = "0.1.0"
description = ""
authors = ["Holger Frey <mail@holgerfrey.de>"]

[tool.poetry.dependencies]
python = "^3.7"
wand = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
