[tool.poetry]
name = "xkcd_display"
version = "0.1.0"
description = "Controller for my XKCD display"
authors = ["Holger Frey <mail@holgerfrey.de>"]
home-page = "https://github.com/holgi"

[tool.poetry.dependencies]
python = "^3.7"
wand = "^0.5.0"
click = "^7.0"
setproctitle = "^1.1"
python-daemon = "^2.2"
pid = "^2.2"

# not included is "service", still waiting for pull requests

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.6"
flake8 = "^3.7"
pytest-mock = "^1.10"

# black = "^18"  # poetry just won't install black, installed it with pip

[tool.poetry.scripts]
xkcd = 'xkcd_display.cli:xkcd'
xkcdtest = 'xkcd_display.cli:xkcdtest'

[tool.black]
line-length = 79
py37 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

